# znlib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml
tests/: conftest.py  test_atomistic.py  test_cli.py  test_examples.py  test_lazy.py  test_scripts.py  test_znlib.py
tests/nodes/: test_monte_carlo_pi_estimator.py
tests/utils/: test_lazy_atoms.py
znlib/: __init__.py  cli.py
znlib/atomistic/: __init__.py  ase.py  cp2k.py  lammps.py
znlib/data/: lammps.jinja2
znlib/examples/: __init__.py  general.py  mc_pi_estimator.py
znlib/nodes/: __init__.py  cp2k.py  cp2k_single_point.py  monte_carlo_pi_estimator.py
znlib/scripts/: __init__.py
znlib/static/: __init__.py  cp2k_md.yaml
znlib/tensorflow/: __init__.py  sign_language_mnist.py
znlib/utils/: __init__.py  lazy.py  lazy_atoms.py
